# ozone

./: .graphifyignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  tag-and-release.yml
.mex/: AGENTS.md  ROUTER.md  setup.sh  sync.sh
.mex/context/: architecture.md  conventions.md  setup.md  stack.md
.mex/conventions/: versioning.md
.mex/patterns/: INDEX.md  artifact-hygiene.md  copilot-skill-customization.md  github-actions-release.md  koboldcpp-launch-diagnostics.md  llamacpp-backend-integration.md  local-install-sync.md  mex-scaffold-sync.md  ozone-mcp-automation.md  ozoneplus-context-inspector.md  ozoneplus-conversation-engine.md  ozoneplus-persistence-bootstrap.md  ozoneplus-phase1f-import-export.md  ozoneplus-phase1g-launcher-onramp.md  ozoneplus-phase2a-memory-foundations.md  ozoneplus-phase2b-hybrid-retrieval.md  ozoneplus-roadmap-planning.md  ozoneplus-streaming-backend-runtime.md  ozoneplus-tui-shell.md  ozoneplus-workspace-bootstrap.md  product-family-docs.md  textarea-command-surfaces.md  tui-launcher-smoke-test.md  tui-profiling-workflow.md
.playtest-xdg-live/ozone/: global.db  preferences.json
.playtest-xdg-live/ozone/sessions/00000000-0000-4001-98a1-5f89937c2101/: config.toml  session.db
Anansi/: anansi_design_v0.3_final.md  consolidated_chat wave 2.md  consolidated_chat.md  consolidation_report.md
apps/ozone-mcp/: Cargo.toml
apps/ozone-mcp/src/: main.rs
apps/ozone-plus/: Cargo.toml  build.rs
apps/ozone-plus/src/: config.rs  context_bridge.rs  hooks.rs  hybrid_search.rs  index_rebuild.rs  inference_adapter.rs  main.rs  runtime.rs  session_title.rs
contrib/: install-dev-hooks.sh  launch-koboldcpp.sh  prune-build-artifacts.sh  sync-local-install.sh
contrib/hooks/: post-commit  post-merge
crates/ozone-core/: Cargo.toml
crates/ozone-core/src/: cli.rs  engine.rs  install.rs  lib.rs  planner.rs  session.rs
crates/ozone-engine/: Cargo.toml
crates/ozone-engine/src/: command.rs  context.rs  engine.rs  error.rs  in_memory.rs  lib.rs  snapshot.rs  store.rs  tests.rs  thinking.rs
crates/ozone-inference/: Cargo.toml
crates/ozone-inference/src/: config.rs  error.rs  gateway.rs  lib.rs  stream.rs  templates.rs
crates/ozone-inference/src/backend/: koboldcpp.rs  llamacpp.rs  mod.rs
crates/ozone-mcp/: Cargo.toml
crates/ozone-mcp/src/: lib.rs
crates/ozone-mcp/tests/fixtures/: screen-check-fixture.json
crates/ozone-memory/: Cargo.toml
crates/ozone-memory/src/: assistive.rs  disk_monitor.rs  index.rs  lib.rs  lifecycle.rs  provider.rs  scoring.rs  summary.rs
crates/ozone-persist/: Cargo.toml
crates/ozone-persist/src/: error.rs  import_export.rs  lib.rs  migration.rs  repository.rs  schema.rs
crates/ozone-persist/src/repository/: branch_ops.rs  character_ops.rs  export_ops.rs  lifecycle_ops.rs  memory_ops.rs  message_ops.rs  mod.rs  session_ops.rs  swipe_ops.rs
crates/ozone-tui/: Cargo.toml
crates/ozone-tui/src/: app.rs  input.rs  layout.rs  lib.rs  mock.rs  render.rs  theme.rs
ozone+/: README.md  ozone_plus_documentation_stack.md  ozone_revised_design.md  ozone_v0.4_design.md  ozonelite_scope.md  synthesis_report_r2.md
ozone+/arch/: compatibility_and_migration.md  consolidated_chat.md  consolidated_report2.md  ozone_scope.md  ozone_v0.3_design.md  synthesis_report.md
src/: analyze.rs  bench.rs  catalog.rs  db.rs  gguf.rs  hardware.rs  llama.rs  main.rs  model.rs  planner.rs  prefs.rs  processes.rs  profiling.rs  sweep.rs  theme.rs
src/ui/: launcher.rs  mod.rs  monitor.rs  splash.rs  tier_install.rs  tier_picker.rs
templates/: alpaca.jinja  chatml.jinja  llama3-instruct.jinja
