[package]
name = "ozone"
version = "0.1.0"
edition = "2021"
description = "Local AI stack operator — KoboldCpp + SillyTavern TUI"
license = "MIT"
repository = "https://github.com/EricA1019/ozone"
homepage = "https://github.com/EricA1019/ozone"
keywords = ["tui", "llm", "koboldcpp", "sillytavern", "ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "ozone"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "5"
libc = "0.2"
ratatui = { version = "0.29", features = ["crossterm"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
