[package]
name = "ozone"
version = "0.1.0"
edition = "2021"
description = "⬡ Ozone — local AI stack operator for benchmarks, sweeps, profiles, and launch workflows"
license = "MIT"
repository = "https://github.com/EricA1019/ozone"
homepage = "https://github.com/EricA1019/ozone"
keywords = ["tui", "llm", "koboldcpp", "sillytavern", "ai"]
categories = ["command-line-utilities"]

[workspace]
members = [
    "apps/ozone-plus",
    "crates/ozone-core",
    "crates/ozone-engine",
    "crates/ozone-inference",
    "crates/ozone-memory",
    "crates/ozone-persist",
    "crates/ozone-tui",
]
resolver = "2"

[[bin]]
name = "ozone"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "5"
libc = "0.2"
ozone-core = { path = "crates/ozone-core" }
ratatui = { version = "0.29", features = ["crossterm"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
