[package]
name = "ozone"
version = "0.4.7-alpha"
edition = "2021"
description = "⬡ Ozone — local AI stack operator for benchmarks, sweeps, profiles, and launch workflows"
license = "MIT"
repository = "https://github.com/EricA1019/ozone"
homepage = "https://github.com/EricA1019/ozone"
keywords = ["tui", "llm", "koboldcpp", "sillytavern", "ai"]
categories = ["command-line-utilities"]

[workspace]
members = [
    "apps/ozone-mcp",
    "apps/ozone-plus",
    "crates/ozone-core",
    "crates/ozone-engine",
    "crates/ozone-inference",
    "crates/ozone-mcp",
    "crates/ozone-memory",
    "crates/ozone-persist",
    "crates/ozone-tui",
]
resolver = "2"

[[bin]]
name = "ozone"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "5"
libc = "0.2"
ozone-core = { path = "crates/ozone-core" }
ratatui = { version = "0.29", features = ["crossterm"] }
reqwest = { version = "0.12", features = ["json"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
ratatui-braille-bar = "0.2.2"

[dev-dependencies]

[features]
default = []
full = ["bench", "sweep", "analyze", "profiling-ui", "model-mgmt"]
database = ["dep:rusqlite"]
bench = ["database"]
sweep = ["bench"]
analyze = ["database"]
profiling-ui = ["bench", "sweep", "analyze"]
model-mgmt = []

[profile.release]
strip = true
lto = "thin"

[profile.release-lite]
inherits = "release"
opt-level = "z"       # optimize for binary size
lto = "fat"           # full LTO — slower build, smaller output
codegen-units = 1     # single unit enables more cross-function optimization
strip = "symbols"     # strip all debug symbols
panic = "abort"       # no unwinding machinery (~10-20% size savings)
