[package]
name = "ozone-plus"
version = "0.1.0"
edition = "2021"
publish = false
description = "Phase 2A ozone+ chat shell — manual memory + recall foundations"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
ozone-core = { path = "../../crates/ozone-core" }
ozone-engine = { path = "../../crates/ozone-engine" }
ozone-inference = { path = "../../crates/ozone-inference" }
ozone-memory = { version = "0.1.0", path = "../../crates/ozone-memory" }
ozone-persist = { path = "../../crates/ozone-persist" }
ozone-tui = { path = "../../crates/ozone-tui" }
tokio = { version = "1", features = ["rt", "sync"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
