[package]
name = "ozone-plus"
version = "0.4.7-alpha"
edition = "2021"
publish = false
description = "⬡ ozone+ — local-LLM chat shell with persistent memory and sessions"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ozone-core = { path = "../../crates/ozone-core" }
ozone-engine = { path = "../../crates/ozone-engine" }
ozone-inference = { path = "../../crates/ozone-inference" }
ozone-memory = { path = "../../crates/ozone-memory" }
ozone-persist = { path = "../../crates/ozone-persist" }
ozone-tui = { path = "../../crates/ozone-tui" }
tokio = { version = "1", features = ["rt", "sync"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
