[package]
name = "ozone-engine"
version = "0.4.0"
edition = "2021"
publish = false
description = "Conversation engine with branching, swipes, and context assembly for ozone+"
license = "MIT"

[dependencies]
ozone-core = { path = "../ozone-core" }
tokio = { version = "1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

