[package]
name = "ozone-inference"
version = "0.4.0"
edition = "2021"
publish = false
description = "Phase 1D inference gateway, config, and prompt templates for ozone+"
license = "MIT"

[dependencies]
anyhow = "1"
bytes = "1"
config = "0.14"
directories = "5"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
minijinja = { version = "2", features = ["loader"] }
ozone-core = { path = "../ozone-core" }
ozone-memory = { path = "../ozone-memory" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
