[package]
name = "ozone-mcp"
version = "0.4.1-alpha"
edition = "2021"
publish = false
description = "⬡ Ozone MCP server for testing and development automation"
license = "MIT"

[dependencies]
anyhow = "1"
ozone-core = { path = "../ozone-core" }
ozone-persist = { path = "../ozone-persist" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
