[package]
name = "ozone-memory"
version = "0.4.0"
edition = "2021"
publish = false
description = "Memory domain types, embeddings, hybrid retrieval, and lifecycle for ozone+"
license = "MIT"

[features]
default = []
fastembed = ["dep:fastembed"]

[dependencies]
ozone-core = { path = "../ozone-core" }
serde = { version = "1", features = ["derive"] }
fastembed = { version = "5.13.2", default-features = false, features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"], optional = true }
libc = "0.2"
usearch = { version = "2.24.0", default-features = false, features = ["fp16lib"] }
serde_json = "1"
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1"
