[package]
name = "ozone-persist"
version = "0.4.0"
edition = "2021"
publish = false
description = "Phase 1A SQLite persistence for ozone+"
license = "MIT"

[dependencies]
ozone-core = { path = "../ozone-core" }
ozone-memory = { path = "../ozone-memory" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
