[package]
name = "ozone-persist"
version = "0.4.2-alpha"
edition = "2021"
publish = false
description = "SQLite persistence layer for sessions, messages, memories, and search in ozone+"
license = "MIT"

[dependencies]
ozone-core = { path = "../ozone-core" }
ozone-memory = { path = "../ozone-memory" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
