[package]
name = "ozone-tui"
version = "0.4.1-alpha"
edition = "2021"
publish = false
description = "Chat-first TUI shell for ozone+ with ratatui and crossterm"
license = "MIT"

[dependencies]
crossterm = "0.28"
ozone-core = { path = "../ozone-core" }
ratatui = { version = "0.29", features = ["crossterm"] }
