[package]
name = "ozone-tui"
version = "0.4.8-alpha"
edition = "2021"
publish = false
description = "Chat-first TUI shell for ozone+ with ratatui and crossterm"
license = "MIT"

[dependencies]
crossterm = "0.28"
ozone-core = { path = "../ozone-core" }
ratatui = { version = "0.29", features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
tui-textarea = { version = "0.7.0", features = ["crossterm"] }

[dev-dependencies]
serde_json = "1"
